--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     };
   </script>
   <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <!-- script src="//cdn.jsdelivr.net/npm/docsify@4" -->
+  <script src="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/docsify.js"></script>
   <!-- Katex for Docsify -->
   <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
   <!-- syntax highlight -->
