--- a/index.html
+++ b/index.html
@@ -80,5 +80,7 @@
   <script src="//unpkg.com/docsify-count/dist/countable.min.js"></script>
   <!-- plant uml -->
   <script src="//unpkg.com/docsify-plantuml/dist/docsify-plantuml.min.js"></script>
+  <script src="utils.js"></script>
+
 </body>
 </html>
