--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
   </script>
   <!-- Docsify v4 -->
   <!-- script src="//cdn.jsdelivr.net/npm/docsify@4" -->
-  <script src="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/docsify.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  
   <!-- Katex for Docsify -->
   <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
+  
   <!-- syntax highlight -->
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-c.min.js"></script>
@@ -70,16 +72,23 @@
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-sql.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-json.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-verilog.min.js"></script>
+  
   <!-- search -->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  
   <!-- copy code -->
   <script src="https://unpkg.com/docsify-copy-code@2"></script>
+  
   <!-- flexible alert -->
   <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
+  
   <!-- Word Count -->
   <script src="//unpkg.com/docsify-count/dist/countable.min.js"></script>
+
   <!-- plant uml -->
   <script src="//unpkg.com/docsify-plantuml/dist/docsify-plantuml.min.js"></script>
+
+  <!-- utils functions -->
   <script src="utils.js"></script>
 
 </body>
